css 파일 위치 변경

--- a/style/css/common.css
+++ b/style/css/common.css
@@ -1,5 +1,5 @@
 * {
-  box-sizing: border-box;  
+  box-sizing: border-box;
 }
 
 html,
@@ -146,4 +146,4 @@ button {
 a {
   color: inherit;
   text-decoration: none;
-}/*# sourceMappingURL=common.css.map */
+}
