visual matter.js 효과 추가

--- a/style/css/layouts.css
+++ b/style/css/layouts.css
@@ -1,20 +1,23 @@
+@import url(../css/common.css);
 #header {
   position: sticky;
   left: 0;
   top: 0;
+  z-index: 10;
   width: 100%;
-  padding: 10px;
+  padding: var(--padding-base);
+  background: var(--white-color);
 }
 #header .inner {
   display: flex;
   align-items: center;
   position: relative;
   width: 100%;
-  border: 1px solid #000;
+  border: 1px solid var(--primary-color);
 }
 #header .inner .logo {
   width: 200px;
-  padding: 10px;
+  padding: var(--padding-base);
 }
 #header .inner .btn-menu {
   display: flex;
@@ -24,7 +27,7 @@
   width: 80px;
   height: 80px;
   margin-left: auto;
-  border-left: 1px solid #000;
+  border-left: 1px solid var(--primary-color);
 }
 #header .inner .btn-menu svg {
   width: 30px;
@@ -46,6 +49,7 @@
 #header .inner .gnb-wrapper {
   display: none;
   position: absolute;
+  z-index: 5;
   left: 0;
   top: 100px;
   width: 100%;
@@ -61,12 +65,12 @@
   position: relative;
 }
 #header .inner .gnb-wrapper .gnb li {
-  border: 1px solid #000;
+  border: 1px solid var(--primary-color);
 }
 #header .inner .gnb-wrapper .gnb li a {
   display: block;
   padding: 14px;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid var(--primary-color);
 }
 #header .inner .gnb-wrapper .gnb li a:hover {
   font-weight: bold;
@@ -80,8 +84,8 @@
 }
 #header .inner .gnb-wrapper .gnb li a span:last-child {
   opacity: 0;
-  color: aquamarine;
-  text-shadow: 1px 2px 3px #333;
+  color: var(--secondary-color);
+  text-shadow: 1px 2px 3px var(--primary-color);
 }
 #header .inner .gnb-wrapper .gnb li a:last-child {
   overflow: hidden;
@@ -102,11 +106,11 @@
 #footer {
   position: relative;
   width: 100%;
-  padding: 10px;
+  padding: var(--padding-base);
 }
 #footer .inner {
   padding: 20px;
-  border: 1px solid #000;
+  border: 1px solid var(--primary-color);
 }
 #footer .inner .logo {
   width: 200px;
