--- a/style/css/common.css
+++ b/style/css/common.css
@@ -1,4 +1,15 @@
+:root {
+  --primary-color: #1a1a1a;
+  --secondary-color: #2fd897;
+  --white-color: #ffffff;
+  --font-size-base: 16px;
+  --font-family-base: "Arial, sans-serif";
+  --padding-base: 10px;
+  --border-radius-base: 5px;
+}
+
 * {
+  font-size: var(--font-size-base);
   box-sizing: border-box;
 }
 
