--- a/style/scss/layouts.scss
+++ b/style/scss/layouts.scss
@@ -1,20 +1,24 @@
+@import url(../css/common.css);
+
 #header {
     position: sticky;
     left: 0;
     top: 0;
+    z-index: 10;
     width: 100%;
-    padding: 10px;
+    padding: var(--padding-base);
+    background: var(--white-color);
 
     .inner {
         display: flex;
         align-items: center;
         position: relative;
         width: 100%;
-        border: 1px solid #000;
+        border: 1px solid var(--primary-color);
 
         .logo {
             width: 200px;
-            padding: 10px;
+            padding: var(--padding-base);
         }
 
         .btn-menu {
@@ -25,7 +29,7 @@
             width: 80px;
             height: 80px;
             margin-left: auto;
-            border-left: 1px solid #000;
+            border-left: 1px solid var(--primary-color);
 
             svg {
                 width: 30px;
@@ -57,6 +61,7 @@
         .gnb-wrapper {
             display: none;
             position: absolute;
+            z-index: 5;
             left: 0;
             top: 100px;
             width: 100%;
@@ -73,12 +78,12 @@
                 position: relative;
 
                 li {
-                    border: 1px solid #000;
+                    border: 1px solid var(--primary-color);
 
                     a {
                         display: block;
                         padding: 14px;
-                        border-bottom: 1px solid #000;
+                        border-bottom: 1px solid var(--primary-color);
 
                         &:hover {
                             font-weight: bold;
@@ -94,8 +99,8 @@
 
                             &:last-child {
                                 opacity: 0;
-                                color: aquamarine;
-                                text-shadow: 1px 2px 3px #333;
+                                color: var(--secondary-color);
+                                text-shadow: 1px 2px 3px var(--primary-color);
                             }
                         }
 
@@ -130,11 +135,11 @@
 #footer {
     position: relative;
     width: 100%;
-    padding: 10px;
+    padding: var(--padding-base);
 
     .inner {
         padding: 20px;
-        border: 1px solid #000;
+        border: 1px solid var(--primary-color);
 
         .logo {
             width: 200px;
