--- a/style/css/layouts.css
+++ b/style/css/layouts.css
@@ -40,6 +40,9 @@
 #header .inner .btn-menu svg.ico_close {
   display: none;
 }
+#header .inner .btn-menu.on {
+  background: var(--secondary-color);
+}
 #header .inner .btn-menu.on svg.ico_menu {
   display: none;
 }
@@ -53,6 +56,7 @@
   left: 0;
   top: 100px;
   width: 100%;
+  background: var(--white-color);
   transform: all 0.5s ease-in-out;
 }
 #header .inner .gnb-wrapper.on {
@@ -72,17 +76,31 @@
   padding: 14px;
   border-bottom: 1px solid var(--primary-color);
 }
-#header .inner .gnb-wrapper .gnb li a:hover {
-  font-weight: bold;
-}
-#header .inner .gnb-wrapper .gnb li a span {
+#header .inner .gnb-wrapper .gnb li a:hover span {
   display: block;
-  transition: all 0.5s linear;
+  font-weight: bold;
+  color: var(--secondary-color);
+  animation: ef 0.5s linear;
 }
-#header .inner .gnb-wrapper .gnb li a span:first-child {
+@keyframes ef {
+  0% {
+    transform: translateY(-8px);
+  }
+  50% {
+    transform: translateY(8px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+#header .inner .gnb-wrapper .gnb li a strong {
+  display: block;
+  transition: all 0.3s linear;
+}
+#header .inner .gnb-wrapper .gnb li a strong:first-child {
   opacity: 1;
 }
-#header .inner .gnb-wrapper .gnb li a span:last-child {
+#header .inner .gnb-wrapper .gnb li a strong:last-child {
   opacity: 0;
   color: var(--secondary-color);
   text-shadow: 1px 2px 3px var(--primary-color);
@@ -91,14 +109,15 @@
   overflow: hidden;
   display: block;
   height: 43px;
+  margin-bottom: 14px;
   font-size: 30px;
   font-weight: bold;
   border-bottom: none;
 }
-#header .inner .gnb-wrapper .gnb li a:last-child:hover span:first-child {
+#header .inner .gnb-wrapper .gnb li a:last-child:hover strong:first-child {
   opacity: 0;
 }
-#header .inner .gnb-wrapper .gnb li a:last-child:hover span:last-child {
+#header .inner .gnb-wrapper .gnb li a:last-child:hover strong:last-child {
   opacity: 1;
   transform: translateY(-30px);
 }
