--- a/style/css/common.css
+++ b/style/css/common.css
@@ -3,7 +3,7 @@
   --secondary-color: #2fd897;
   --white-color: #ffffff;
   --font-size-base: 16px;
-  --font-family-base: "Arial, sans-serif";
+  --font-family-base: "Noto Serif KR", sans-serif;
   --padding-base: 10px;
   --border-radius-base: 5px;
 }
