--- a/style/css/index.css
+++ b/style/css/index.css
@@ -14,7 +14,7 @@
   position: relative;
   width: 100%;
   height: 60vh;
-  font-family: "Nanum Myeongjo", serif;
+  font-family: "Nanum Myeongjo", sans-serif;
   font-weight: bold;
   font-style: normal;
   border: 1px solid var(--primary-color);
@@ -36,7 +36,7 @@
   grid-template-rows: repeat(500px, 500px);
   gap: var(--padding-base);
   margin: var(--padding-base) 0;
-  font-family: "Noto Serif KR", serif;
+  font-family: var(--font-family-base);
   font-optical-sizing: auto;
 }
 .area-common article {
@@ -115,5 +115,15 @@
   }
   .area-common article .inner ul li dl dd {
     margin-left: 0.5rem;
+  }
+}
+@media screen and (max-width: 720px) {
+  .area-common {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+  }
+  .area-common article:nth-child(1) {
+    grid-column: inherit;
+    grid-row: 1/span 1;
   }
 }
