--- a/style/css/layouts.css
+++ b/style/css/layouts.css
@@ -59,6 +59,7 @@
   left: 0;
   top: 100px;
   width: 100%;
+  height: 100vh;
   background: var(--white-color);
   transform: all 0.5s ease-in-out;
 }
@@ -66,10 +67,12 @@
   display: block;
 }
 #header .inner .gnb-wrapper .gnb {
+  overflow: scroll;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 20px;
   position: relative;
+  height: 100%;
 }
 #header .inner .gnb-wrapper .gnb li {
   border: 1px solid var(--primary-color);
@@ -77,6 +80,7 @@
 #header .inner .gnb-wrapper .gnb li a {
   display: block;
   padding: 14px;
+  font-family: "Noto Serif KR", sans-serif;
   border-bottom: 1px solid var(--primary-color);
 }
 #header .inner .gnb-wrapper .gnb li a:hover span {
@@ -111,7 +115,7 @@
 #header .inner .gnb-wrapper .gnb li a:last-child {
   overflow: hidden;
   display: block;
-  height: 43px;
+  height: 46px;
   margin-bottom: 14px;
   font-size: 30px;
   font-weight: bold;
@@ -122,7 +126,7 @@
 }
 #header .inner .gnb-wrapper .gnb li a:last-child:hover strong:last-child {
   opacity: 1;
-  transform: translateY(-30px);
+  transform: translateY(-34px);
 }
 
 #footer {
@@ -169,21 +173,14 @@
   }
 }
 @media screen and (max-width: 720px) {
-  #header .inner .gnb-wrapper {
-    overflow: scroll;
-    height: 100vh;
-  }
   #header .inner .gnb-wrapper .gnb {
     grid-template-columns: repeat(2, 1fr);
   }
   #header .inner .gnb-wrapper .gnb li a:last-child {
-    height: 28px;
+    height: 30px;
     font-size: 18px;
   }
   #header .inner .gnb-wrapper .gnb li a:last-child:hover strong:last-child {
     transform: translateY(-20px);
-  }
-  #header .inner .gnb-wrapper::-webkit-scrollbar {
-    display: none;
   }
 }
