--- a/style/scss/common.scss
+++ b/style/scss/common.scss
@@ -3,13 +3,13 @@
     --secondary-color: #2fd897;
     --white-color: #ffffff;
     --font-size-base: 16px;
-    --font-family-base: 'Arial, sans-serif';
+    --font-family-base: "Noto Serif KR", sans-serif;
     --padding-base: 10px;
     --border-radius-base: 5px;
 }
 
 * {
-    font-size: var(--font-size-base);
+    font-size: var(--font-size-base);        
     box-sizing: border-box;
 }
 
