--- a/style/scss/index.scss
+++ b/style/scss/index.scss
@@ -15,7 +15,7 @@
         position: relative;
         width: 100%;
         height: 60vh;
-        font-family: "Nanum Myeongjo", serif;
+        font-family: "Nanum Myeongjo", sans-serif;
         font-weight: bold;
         font-style: normal;
         border: 1px solid var(--primary-color);
@@ -39,8 +39,8 @@
     grid-template-columns: 1fr 1fr 2fr;
     grid-template-rows: repeat(500px, 500px);
     gap: var(--padding-base);
-    margin: var(--padding-base) 0;
-    font-family: "Noto Serif KR", serif;
+    margin: var(--padding-base) 0;    
+    font-family: var(--font-family-base);
     font-optical-sizing: auto;
 
     article {
@@ -149,6 +149,19 @@
                         }
                     }
                 }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .area-common {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+        article {            
+            &:nth-child(1) {
+                grid-column: inherit;
+                grid-row: 1 / span 1;
             }
         }
     }
