--- a/style/scss/layouts.scss
+++ b/style/scss/layouts.scss
@@ -63,13 +63,14 @@
             }
         }
 
-        .gnb-wrapper {
+        .gnb-wrapper {            
             display: none;
             position: absolute;
             z-index: 5;
             left: 0;
             top: 100px;
             width: 100%;
+            height: 100vh;
             background: var(--white-color);
             transform: all 0.5s ease-in-out;
 
@@ -77,11 +78,13 @@
                 display: block;
             }
 
-            .gnb {
+            .gnb {        
+                overflow: scroll;        
                 display: grid;
                 grid-template-columns: repeat(6, 1fr);
                 gap: 20px;
                 position: relative;
+                height: 100%;
 
                 li {
                     border: 1px solid var(--primary-color);
@@ -89,6 +92,7 @@
                     a {
                         display: block;
                         padding: 14px;
+                        font-family: "Noto Serif KR", sans-serif;
                         border-bottom: 1px solid var(--primary-color);
 
                         &:hover {
@@ -132,7 +136,7 @@
                         &:last-child {
                             overflow: hidden;
                             display: block;
-                            height: 43px;
+                            height: 46px;
                             margin-bottom: 14px;
                             font-size: 30px;
                             font-weight: bold;
@@ -146,7 +150,7 @@
 
                                     &:last-child {
                                         opacity: 1;
-                                        transform: translateY(-30px);
+                                        transform: translateY(-34px);
                                     }
                                 }
                             }
@@ -222,16 +226,13 @@
     #header {
         .inner {
             .gnb-wrapper {
-                overflow: scroll;
-                height: 100vh;
-
                 .gnb {
                     grid-template-columns: repeat(2, 1fr);
 
                     li {
                         a {
                             &:last-child {
-                                height: 28px;
+                                height: 30px;
                                 font-size: 18px;
 
                                 &:hover {
@@ -245,9 +246,6 @@
                             }
                         }
                     }
-                }
-                &::-webkit-scrollbar {
-                    display: none;
                 }
             }
         }
