--- a/style/css/index.css
+++ b/style/css/index.css
@@ -31,6 +31,7 @@
 }
 
 .area-common {
+  position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr 2fr;
   grid-template-rows: repeat(500px, 500px);
@@ -89,6 +90,83 @@
 .area-common article:nth-child(1) {
   grid-column: 1/span 2;
   grid-row: 1/span 3;
+}
+
+.area-scroll {
+  display: flex;
+  position: relative;
+  transition: all 0.8s linear;
+  height: 100vh;
+  --duration: 400ms;
+  --delay: calc(var(--duration) / 2);
+  --ease: cubic-bezier(0.25, 1, 0.5, 1);
+}
+.area-scroll .scroll-inner {
+  overflow: hidden;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+.area-scroll .scroll-inner h2 {
+  display: none;
+  position: absolute;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: var(--white-color);
+  text-shadow: 4px 4px 2px var(--primary-color);
+}
+.area-scroll .scroll-inner h2 .text-inner {
+  --padding: 8px;
+  --duration: 400ms;
+  --delay: calc(var(--duration) / 2);
+  --ease: cubic-bezier(0.25, 1, 0.5, 1);
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  font-size: 10vmin;
+  margin-top: calc(var(--padding) * -1);
+  padding: var(--padding);
+}
+.area-scroll .scroll-inner h2 .text-inner span {
+  display: block;
+  transform: translateY(110%);
+  transition: transform var(--duration) var(--ease);
+}
+.area-scroll .scroll-inner h2 .text-inner:after {
+  content: "";
+  position: absolute;
+  top: calc(100% - var(--padding));
+  left: 0;
+  background-color: var(--white-color);
+  width: 100%;
+  height: 1.5vmin;
+  transform: scaleX(0);
+  transition: transform var(--duration) var(--delay) var(--ease);
+}
+.area-scroll .scroll-inner .hero-img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 130%;
+  object-fit: cover;
+}
+.area-scroll .scroll-inner.on h2 {
+  font-weight: bold;
+  transition-delay: var(--delay);
+}
+.area-scroll .scroll-inner.on h2 .text-inner span {
+  transform: translateY(0);
+  transition-delay: var(--delay);
+}
+.area-scroll .scroll-inner.on h2 .text-inner::after {
+  transform: scaleX(1);
+  transition-delay: 0s;
 }
 
 @media screen and (max-width: 920px) {
