--- a/style/scss/index.scss
+++ b/style/scss/index.scss
@@ -35,11 +35,12 @@
 }
 
 .area-common {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 2fr;
     grid-template-rows: repeat(500px, 500px);
     gap: var(--padding-base);
-    margin: var(--padding-base) 0;    
+    margin: var(--padding-base) 0;
     font-family: var(--font-family-base);
     font-optical-sizing: auto;
 
@@ -112,14 +113,108 @@
     }
 }
 
+.area-scroll {
+    display: flex;
+    position: relative;
+    transition: all 0.8s linear;
+    height: 100vh;
+    --duration: 400ms;
+    --delay: calc(var(--duration) / 2);
+    --ease: cubic-bezier(0.25, 1, 0.5, 1);
+
+    .scroll-inner {
+        overflow: hidden;
+        display: flex;
+        position: relative;
+        width: 100%;
+        height: 100vh;
+
+        h2 {
+            display: none;
+            position: absolute;
+            left: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            color: var(--white-color);
+            text-shadow: 4px 4px 2px var(--primary-color);
+
+            .text-inner {
+                --padding: 8px;
+                --duration: 400ms;
+                --delay: calc(var(--duration) / 2);
+                --ease: cubic-bezier(0.25, 1, 0.5, 1);
+
+                overflow: hidden;
+                position: relative;
+                display: inline-block;
+                font-size: 10vmin;
+                margin-top: calc(var(--padding) * -1);
+                padding: var(--padding);
+
+                span {
+                    display: block;
+                    transform: translateY(110%);
+                    transition: transform var(--duration) var(--ease);
+                }
+
+                &:after {
+                    content: "";
+                    position: absolute;
+                    top: calc(100% - var(--padding));
+                    left: 0;
+                    background-color: var(--white-color);
+                    width: 100%;
+                    height: 1.5vmin;
+                    transform: scaleX(0);
+                    transition: transform var(--duration) var(--delay) var(--ease);
+                }
+            }
+        }
+
+        .hero-img {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 130%;
+            object-fit: cover;
+        }
+
+        &.on {
+            h2 {
+                font-weight: bold;
+                transition-delay: var(--delay);
+
+                .text-inner {
+                    span {
+                        transform: translateY(0);
+                        transition-delay: var(--delay);
+                    }
+
+                    &::after {
+                        transform: scaleX(1);
+                        transition-delay: 0s;
+                    }
+                }
+
+            }
+
+        }
+    }
+}
+
 @media screen and (max-width: 920px) {
-    .contents {     
+    .contents {
         .visual {
             .word {
                 font-size: 1.4rem;
             }
         }
     }
+
     .area-common {
         article {
             .inner {
@@ -158,7 +253,8 @@
     .area-common {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(1, 1fr);
-        article {            
+
+        article {
             &:nth-child(1) {
                 grid-column: inherit;
                 grid-row: 1 / span 1;
