--- a/style/css/layouts.css
+++ b/style/css/layouts.css
@@ -135,6 +135,7 @@
   max-width: 1400px;
   margin: auto;
   padding: var(--padding-base);
+  background: var(--white-color);
 }
 #footer .inner {
   padding: 20px;
