--- a/style/scss/layouts.scss
+++ b/style/scss/layouts.scss
@@ -168,6 +168,7 @@
     max-width: 1400px;
     margin: auto;
     padding: var(--padding-base);
+    background: var(--white-color);
 
     .inner {
         padding: 20px;
