--- a/style/scss/index.scss
+++ b/style/scss/index.scss
@@ -9,6 +9,7 @@
     max-width: 1400px;
     margin: auto;
     padding: var(--padding-base);
+    padding-bottom: 0;
 
     .visual {
         overflow: hidden;
@@ -21,6 +22,7 @@
         border: 1px solid var(--primary-color);
 
         .word {
+            user-select: none;
             position: absolute;
             cursor: grab;
             font-size: 2.5rem;
@@ -43,6 +45,10 @@
     margin: var(--padding-base) 0;
     font-family: var(--font-family-base);
     font-optical-sizing: auto;
+
+    &:last-child {
+        margin: 0;
+    }
 
     article {
         font-weight: bold;
@@ -153,6 +159,7 @@
                 font-size: 10vmin;
                 margin-top: calc(var(--padding) * -1);
                 padding: var(--padding);
+                font-family: var(--font-family-base);
 
                 span {
                     display: block;
@@ -206,6 +213,82 @@
     }
 }
 
+.sub {
+    display: inherit;
+    background: var(--white-color);
+    border: 1px solid var(--primary-color);
+
+    .inner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        padding: 3rem;
+
+        h2 {
+            font-size: 2rem;
+            font-weight: bold;
+        }
+
+        p {
+            font-size: 1.2rem;
+            line-height: 1.8rem;
+            text-align: center;
+            margin: 30px 0;
+        }
+
+        .list-wrapper {
+            .list-box {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                li {
+                    margin: var(--padding-base);
+                    padding: 40px;
+                    text-align: center;
+                    border: 1px solid var(--primary-color);
+                    border-radius: var(--border-radius-base);
+
+                    h3 {
+                        font-size: 1.4rem;
+                        font-weight: bold;
+                        margin-bottom: 20px;
+                    }
+
+                    button {
+                        position: relative;
+                        background: var(--secondary-color);
+                        font-size: 1.2rem;
+                        padding: 1rem 1.4rem;
+                        border: 3px solid var(--primary-color);
+                        border-radius: var(--border-radius-base);
+                        box-shadow: 5px 5px 0 var(--primary-color);
+
+                        &:active {
+                            box-shadow: 0px 0px 0px 0px;
+                            top: 5px;
+                            left: 5px;
+                        }
+                    }
+
+                    figure {
+                        width: 100%;
+                        height: 600px;
+                        margin-top: 40px;
+
+                        img {
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 920px) {
     .contents {
         .visual {
@@ -241,6 +324,25 @@
                             dd {
                                 margin-left: 0.5rem;
                             }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .sub {
+        .inner {
+            padding: var(--padding-base);
+            .list-wrapper {
+                .list-box {
+                    flex-direction: column;                    
+    
+                    li {                        
+                        padding: 20px;
+    
+                        figure {
+                            height: 460px;                                
                         }
                     }
                 }
