--- a/style/css/layouts.css
+++ b/style/css/layouts.css
@@ -45,6 +45,7 @@
 }
 #header .inner .btn-menu.on {
   background: var(--secondary-color);
+  z-index: 20;
 }
 #header .inner .btn-menu.on svg.ico_menu {
   display: none;
@@ -54,12 +55,13 @@
 }
 #header .inner .gnb-wrapper {
   display: none;
+  overflow: hidden;
   position: absolute;
-  z-index: 5;
+  z-index: 20;
   left: 0;
   top: 100px;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 130px);
   background: var(--white-color);
   transform: all 0.5s ease-in-out;
 }
@@ -67,12 +69,16 @@
   display: block;
 }
 #header .inner .gnb-wrapper .gnb {
-  overflow: scroll;
+  overflow: auto;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 20px;
   position: relative;
   height: 100%;
+  padding: 0;
+}
+#header .inner .gnb-wrapper .gnb::-webkit-scrollbar {
+  display: none;
 }
 #header .inner .gnb-wrapper .gnb li {
   border: 1px solid var(--primary-color);
@@ -127,6 +133,20 @@
 #header .inner .gnb-wrapper .gnb li a:last-child:hover strong:last-child {
   opacity: 1;
   transform: translateY(-34px);
+}
+
+.dim {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  width: 100vw;
+  height: 100vh;
+  background: var(--white-color);
+}
+.dim.on {
+  display: block;
 }
 
 #footer {
